--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@
     padding: 0;
 }
 
+body{
+    width: 100%;
+    height: 100%;
+}
+
 .content {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .column {
@@ -96,7 +102,10 @@ footer {
     background-color: black;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 5px 0;
+    width: 100%;
+    /* position: absolute;
+    bottom: 0; */
 }
 footer a {
     color: white;
