--- a/style.css
+++ b/style.css
@@ -3,19 +3,17 @@
     padding: 0;
 }
 
-body{
-    width: 100%;
-    height: 100%;
-}
 
 .content {
+    width: 1400px;
+    margin: auto;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
 }
 
 .column {
     margin: 5px;
+    display: inline-block;
 }
 
 table {
@@ -98,15 +96,13 @@ td {
     letter-spacing: 0;
 }
 
-footer {
+.footer {
     background-color: black;
     color: white;
     text-align: center;
     padding: 5px 0;
     width: 100%;
-    /* position: absolute;
-    bottom: 0; */
 }
-footer a {
+.footer a {
     color: white;
 }
