--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ table {
     letter-spacing: 1px;
     font-family: DFKai-sb;
     margin-top: 15px;
+    width: 650px;
+    height: 700px;
 }
 
 th,
