--- a/Anilove/style.css
+++ b/Anilove/style.css
@@ -321,8 +321,7 @@
 }
 
 .volunteer .main-content .item {
-    width: 50%;
-    margin: 0 15px 50px 15px;
+    margin: 0 50px 50px 50px;
 }
 
 .volunteer .main-content .item img {
@@ -330,6 +329,7 @@
 }
 
 .volunteer .main-content .left {
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -345,6 +345,7 @@
 }
 
 .volunteer .main-content .right {
+    width: 55%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -365,7 +366,7 @@
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     text-align: center;
     margin-bottom: 80px;
 }
@@ -373,8 +374,6 @@
 .upcoming .text {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100px;
     font-weight: 700;
 }
 
@@ -400,7 +399,7 @@
     border-radius: 2px;
     border: 1px solid #ff9933;
     font-size: 14px;
-    padding: 15px 30px;
+    margin: 0 10px;
     color: #fff;
     background-color: #ff9933;
     line-height: 24px;
