--- a/Anilove/style.css
+++ b/Anilove/style.css
@@ -343,7 +343,7 @@
     width: 55%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .volunteer .main-content p {
