--- a/Anilove/style.css
+++ b/Anilove/style.css
@@ -7,14 +7,6 @@
     text-decoration: none;
 }
 
-.navFixed {
-    z-index: 99;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 90px;
-}
-
 .header .top {
     background-color: #272626;
     height: 60px;
@@ -67,14 +59,21 @@
     color: #272626;
 }
 
-.header .main {
+.main {
     font-size: 18px;
     background-color: #fff;
     padding: 10px 0;
     width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
-.header .main .main-content {
+.main-Fixed {
+    height: 88px;
+}
+
+.main .main-content {
     width: 1200px;
     margin: auto;
     display: flex;
@@ -83,12 +82,12 @@
     vertical-align: top;
 }
 
-.header .main .logo {
+.main .logo {
     display: flex;
     padding: 15px;
 }
 
-.header .main .logo .title {
+.main .logo .title {
     font-family: "PT Serif", serif;
     color: #535353;
     font-size: 50px;
@@ -96,14 +95,14 @@
     font-weight: 700;
 }
 
-.header .main nav {
+.main nav {
     font-weight: 100;
     display: flex;
     width: 500px;
     justify-content: space-evenly;
 }
 
-.header .main nav li {
+.main nav li {
     font-weight: 300;
     padding: 15px 0;
     line-height: 26px;
@@ -113,11 +112,11 @@
     border-bottom: 3px solid #ffffff;
 }
 
-.header .main nav li a {
+.main nav li a {
     color: #535353;
 }
 
-.header .main nav li:hover {
+.main nav li:hover {
     border-color: #ff9933;
 }
 
@@ -569,7 +568,7 @@
     width: 100%;
     background-color: #ff9933;
     opacity: 0;
-    transition: all .4s ease-in;
+    transition: all 0.4s ease-in;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -689,7 +688,7 @@
 }
 
 .phone-call i:hover {
-    opacity: .7;
+    opacity: 0.7;
 }
 
 .top-btn {
@@ -709,8 +708,8 @@
     cursor: pointer;
 }
 
-.top-btn:hover{
-    background-color:#7abee9;
+.top-btn:hover {
+    background-color: #7abee9;
 }
 
 .top-btn i {
