--- a/Naturio/style.css
+++ b/Naturio/style.css
@@ -81,7 +81,7 @@ body {
     width: 100%;
 }
 
-.tag{
+.tag {
     padding: 8px 10px;
     margin: 0;
     border-radius: 0;
@@ -96,11 +96,11 @@ body {
     color: #fff;
 }
 
-.tag-onsale{
+.tag-onsale {
     background-color: #ed2835;
 }
 
-.tag-featured{
+.tag-featured {
     background-color: #86ae34;
 }
 
@@ -141,6 +141,93 @@ body {
 
 #toTop:hover {
     background-position: left bottom;
+}
+
+.popup {
+    width: 555px;
+    height: 370px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    z-index: 99;
+    background-image: url("img/asset42.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+.popup-container {
+    text-align: center;
+    margin: 0 40px;
+}
+
+.popup-container h3 {
+    margin: 60px 0;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 1.45;
+    font-family: Pacifico, handwriting;
+    letter-spacing: 0.02em;
+    color: #1e1d24;
+}
+
+.popup-container .popup-panel {
+    display: flex;
+    justify-content: center;
+    padding: 5px 0;
+}
+
+.popup-input {
+    flex-grow: 4;
+    padding: 0 40px;
+    border: 1px solid #c9cdcf;
+    border-radius: 3px;
+    color: #9ba0a3;
+    font-size: 14px;
+}
+
+.popup-input:focus {
+    outline: none;
+}
+
+.popup-btn {
+    flex-grow: 1;
+    font-size: 16px;
+    padding: 6.5px 30px;
+    border-radius: 2px;
+    margin: 0 10px;
+    line-height: 2.2em;
+}
+
+.popup-btn a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.popup-check{
+    margin-top: 100px;
+}
+
+.popup-check #not-show,.popup-check label{
+    cursor: pointer;
+}
+
+.popup .close-btn {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 24px;
+    line-height: 1.2;
+    text-align: center;
 }
 
 .top-panel {
@@ -341,7 +428,7 @@ body {
 }
 
 .intro-pic-block .pic:hover:before {
-    opacity: .6;
+    opacity: 0.6;
     left: 10px;
     right: 10px;
     background-color: rgba(134, 174, 52, 0.3);
@@ -426,12 +513,11 @@ body {
     border: 1px solid #f0f0f0;
 }
 
-
 .products-tabs-content .product-thumbnail img {
     width: 100%;
 }
 
-.products-tabs-content .product-content{
+.products-tabs-content .product-content {
     height: 100px;
 }
 
@@ -462,36 +548,35 @@ body {
     color: #333333;
 }
 
-.products-tabs-content .product .product_button_block{
+.products-tabs-content .product .product_button_block {
     display: flex;
     justify-content: space-between;
     padding-left: 5px;
     align-items: center;
 }
 
-.icon-block{
+.icon-block {
     height: 40px;
     width: 40px;
     background-color: #fff;
     border-radius: 50%;
     line-height: 2.5;
-    transition: .4s;
+    transition: 0.4s;
 }
 
-.icon-block:hover{
+.icon-block:hover {
     background-color: #86ae34;
     color: #fff;
 }
 
-
-.products-tabs-content .product .product_button_block .addCart{
+.products-tabs-content .product .product_button_block .addCart {
     margin: 0;
     padding: 13px 18px;
     font-size: 12px;
     font-weight: 700;
 }
 
-.products-tabs-content .product .product_button_block .addCart a{
+.products-tabs-content .product .product_button_block .addCart a {
     text-decoration: none;
     color: #fff;
 }
@@ -765,7 +850,7 @@ body {
     transition: 0.3s;
 }
 
-.swiper-container .swiper-button-next:hover{
+.swiper-container .swiper-button-next:hover {
     background-color: #86ae34;
 }
 
@@ -788,7 +873,7 @@ body {
     transition: 0.3s;
 }
 
-.swiper-container .swiper-button-prev:hover{
+.swiper-container .swiper-button-prev:hover {
     background-color: #86ae34;
 }
 
@@ -886,7 +971,7 @@ footer .container .store-info li {
     line-height: 1.8;
 }
 
-footer .container .type a{
+footer .container .type a {
     text-decoration: none;
     color: #79787f;
     font-size: 15px;
