--- a/Toyota/style.css
+++ b/Toyota/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    font-family: '微軟正黑體', Helvetica, Verdana, Arial;
+    font-family: "微軟正黑體", Helvetica, Verdana, Arial;
 }
 
 .container {
@@ -49,13 +49,16 @@
     padding: 5px 55px;
     border: 1px dashed #e4dede;
     border-bottom: 2px solid #852f2f;
+    background: linear-gradient(to bottom, #fff 50%, #852f2f 50%);
+    background-size: 100% 200%;
+    background-position: top;
     line-height: 36px;
     color: #000000;
     transition: .5s;
 }
 
 .top-info .tabs ul a:hover {
-    background: linear-gradient(to top, #852f2f, #852f2f);
+    background-position: bottom;
     color: #fff;
 }
 
@@ -88,7 +91,7 @@
 }
 
 .advantage .info h2 {
-    background-color: #BB0404;
+    background-color: #bb0404;
     padding: 0 5px;
     font-size: 50px;
     color: #fff;
@@ -96,7 +99,7 @@
     font-weight: 300;
 }
 
-.advantage .info h2 span{
+.advantage .info h2 span {
     writing-mode: vertical-lr;
     vertical-align: middle;
     line-height: 1;
@@ -118,7 +121,6 @@
     font-weight: 700;
 }
 
-
 .advantage-right .color-block {
     /* opacity: 0; */
     position: relative;
@@ -129,7 +131,7 @@
     height: 290px;
     float: right;
     z-index: 1;
-    opacity: .2;
+    opacity: 0.2;
 }
 
 .advantage-left .color-block {
@@ -142,7 +144,7 @@
     width: 510px;
     height: 410px;
     z-index: 1;
-    opacity: .2;
+    opacity: 0.2;
 }
 
 .advantage-right .video-btn {
@@ -169,7 +171,7 @@
     position: absolute;
     height: 47px;
     width: 60px;
-    background-color: #BB0404;
+    background-color: #bb0404;
     top: 50%;
     /* right: -15px; */
     margin-top: -30px;
@@ -184,7 +186,6 @@
     right: -15px;
 }
 
-
 .advantage .video-btn .video-btn-icon-left {
     left: -15px;
 }
@@ -194,7 +195,7 @@
     position: absolute;
     transition: all 0.5s ease-out;
     margin-top: 140px;
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
     z-index: 3;
     padding: 15px 20px;
     margin-bottom: 30px;
@@ -206,7 +207,7 @@
     position: absolute;
     transition: all 0.5s ease-out;
     margin-top: 140px;
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
     z-index: 3;
     padding: 15px 20px;
     margin-bottom: 30px;
@@ -214,7 +215,7 @@
 }
 
 .advantage .text-block h3 {
-    color: #BB0404;
+    color: #bb0404;
     margin-bottom: 15px;
 }
 
